Fix issue with dark mode text on auxiliary pages, closes #222

--- a/src/styles/main.sass
+++ b/src/styles/main.sass
@@ -833,6 +833,7 @@ table.expenses
   .timeline-description,
   .timeline-filter,
   .timeline-icon i,
+  .content-wrapper,
   .attribution
     color: $dark-main-color
 
